tests/rosetta/out/Swift/accumulator-factory.error
swiftc: exit status 1
/tmp/accumulator-factory.swift:2:34: error: expected parameter type following ':'
 1 | // Generated by Mochi compiler v0.10.26 on 2025-07-16T13:15:38Z
 2 | func accumulator(_ sum: inout any) -> (any) -> Void {
   |                                  `- error: expected parameter type following ':'
 3 |     var store: [any] = [sum]
 4 |     func add(_ nv: inout any) -> any {

/tmp/accumulator-factory.swift:2:43: error: expected type
 1 | // Generated by Mochi compiler v0.10.26 on 2025-07-16T13:15:38Z
 2 | func accumulator(_ sum: inout any) -> (any) -> Void {
   |                                           `- error: expected type
 3 |     var store: [any] = [sum]
 4 |     func add(_ nv: inout any) -> any {

/tmp/accumulator-factory.swift:3:20: error: expected element type
 1 | // Generated by Mochi compiler v0.10.26 on 2025-07-16T13:15:38Z
 2 | func accumulator(_ sum: inout any) -> (any) -> Void {
 3 |     var store: [any] = [sum]
   |                    `- error: expected element type
 4 |     func add(_ nv: inout any) -> any {
 5 |         store[0] = store[0] + nv

/tmp/accumulator-factory.swift:4:29: error: expected parameter type following ':'
 2 | func accumulator(_ sum: inout any) -> (any) -> Void {
 3 |     var store: [any] = [sum]
 4 |     func add(_ nv: inout any) -> any {
   |                             `- error: expected parameter type following ':'
 5 |         store[0] = store[0] + nv
 6 |         return store[0]

/tmp/accumulator-factory.swift:4:38: error: expected type for function result
 2 | func accumulator(_ sum: inout any) -> (any) -> Void {
 3 |     var store: [any] = [sum]
 4 |     func add(_ nv: inout any) -> any {
   |                                      `- error: expected type for function result
 5 |         store[0] = store[0] + nv
 6 |         return store[0]

/tmp/accumulator-factory.swift:11:25: error: cannot pass immutable value as inout argument: literals are not mutable
 9 | }
10 | func main() {
11 |     let x = accumulator(&1)
   |                         `- error: cannot pass immutable value as inout argument: literals are not mutable
12 |     x(5)
13 |     accumulator(&3)

/tmp/accumulator-factory.swift:13:17: error: cannot pass immutable value as inout argument: literals are not mutable
11 |     let x = accumulator(&1)
12 |     x(5)
13 |     accumulator(&3)
   |                 `- error: cannot pass immutable value as inout argument: literals are not mutable
14 |     print(String(x(2.3)))
15 | }
